# charbs

./: .gitignore  Cargo.toml  book.toml  rustfmt.toml
.github/workflows/: clippy.yml
docs/: SUMMARY.md  binding.md  state.md
examples/: basic.rs  renderer.rs  window.rs
examples/app/: window.rs
examples/state/: basic.rs  init.rs  loop.rs
macros/: Cargo.toml
macros/src/: event.rs  lib.rs  schedule.rs
src/: app.rs  assets.rs  binding.rs  buffer.rs  buffers.rs  camera.rs  events.rs  geometry.rs  input.rs  lib.rs  material.rs  materials.rs  math.rs  mesh.baj.rs  mesh.rs  modules.rs  prelude.rs  render.rs  renderer.rs  rendering.rs  resources.rs  shader.rs  state.rs  texture.rs  transform.rs  window.rs
src/shaders/: color.wgsl  texture.wgsl
tests/: assets.rs  events.rs  resources.rs
