[package]
name = "charbs"
version = "0.0.0"
edition = "2021"

[lib]
name = "charbs"
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = "0.30.3"
charbs_macros = { path = "macros" }
bytemuck = { version = "1.16.1", features = ["derive"] }
wgpu = "22.0.0"
encase = { version = "0.9.0", features = ["glam"] }
pollster = "0.3.0"

[[example]]
name = "state_basic"
path = "examples/state/basic.rs"

[[example]]
name = "app_window"
path = "examples/app/window.rs"
